# Opx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
Benchmark/: CMakeLists.txt  Main.cpp
Benchmark/Benchmark/: Benchmark.cpp  Benchmark.hpp
CMake/: Settings.cmake  Utilities.cmake  Utils.cmake
Source/: CMakeLists.txt  Main.cpp
Source/Opx/: Assert.cpp  Assert.hpp  DataTypes.hpp  Foo.cpp  Foo.hpp  Iterator.hpp  Preprocessor.hpp  TypeTraits.hpp
Source/Opx/Algorithm/: AllOf.hpp  AnyOf.hpp  Contains.hpp  Equal.hpp  Find.hpp  FindLast.hpp  ForEach.hpp  NoneOf.hpp  Replace.hpp
Source/Opx/Containers/: Array.hpp  Vector.hpp
Source/Opx/Containers/Details/: ContiguousContainer.hpp
Source/Opx/Exception/: Exception.hpp
Source/Opx/Memory/: Memory.cpp  Memory.hpp
Source/Opx/String/: CharTraits.cpp  CharTraits.hpp  String.cpp  String.hpp
Source/Opx/Utility/: NumericLimits.hpp  Pair.hpp  Singleton.hpp  Utility.hpp  Version.hpp
Source/PCH/: OpxPCH.cpp  OpxPCH.hpp
Test/: CMakeLists.txt  Main.cpp  TypeTraits.cpp
Test/Algorithm/: Algorithm.cpp
Test/Containers/: Iterator.cpp  Vector.cpp
Test/Framework/: Common.hpp  Framework.hpp  TestCase.cpp  TestCase.hpp  TestExecutor.cpp  TestExecutor.hpp  TestMacros.cpp  TestMacros.hpp  TestStringMacros.hpp  TestSuite.cpp  TestSuite.hpp
Test/String/: CharTraits.cpp  CharTraitsChar16.cpp  CharTraitsChar32.cpp  CharTraitsChar8.cpp  CharTraitsWChar.cpp  String.cpp  StringChar16.cpp  StringChar32.cpp  StringChar8.cpp  StringWChar.cpp
Test/String/Impl/: CharTraits.hpp  String.hpp
Test/TypeTraits/: AlignmentOf.cpp  HasVirtualDestructor.cpp  InvokeResult.cpp  IsAbstract.cpp  IsAggregate.cpp  IsAssignable.cpp  IsBaseOf.cpp  IsConstructible.cpp  IsConvertible.cpp  IsDestructible.cpp  IsEmpty.cpp  IsFinal.cpp  IsPolymorphic.cpp  IsSigned.cpp  IsStandardLayout.cpp  IsTriviallyCopyable.cpp  IsUnsigned.cpp  RankAndExtent.cpp  TypeTraits.cpp
Test/Utility/: NumericLimits.cpp  Pair.cpp  Singleton.cpp
